
[TestParseContainerdConfig/standard_single_endpoint - 1]
map[string][]string{
    "docker.io": {"http://localhost:5000"},
}
---

[TestParseContainerdConfig/multiline_array_format - 1]
map[string][]string{
    "docker.io": {"http://localhost:5000", "http://localhost:5001"},
}
---

[TestParseContainerdConfig/multiple_endpoints_inline - 1]
map[string][]string{
    "docker.io": {"http://localhost:5000", "http://localhost:5001"},
}
---

[TestParseContainerdConfig/multiple_mirrors - 1]
map[string][]string{
    "docker.io": {"http://localhost:5000"},
    "gcr.io":    {"http://localhost:5001"},
}
---

[TestParseContainerdConfig/empty_config - 1]
map[string][]string{
}
---

[TestParseContainerdConfig/with_comments - 1]
map[string][]string{
    "docker.io": {"http://localhost:5000"},
}
---

[TestParseContainerdConfig/no_endpoint_field - 1]
map[string][]string{
}
---

[TestParseContainerdConfig/extra_whitespace - 1]
map[string][]string{
    "docker.io": {"http://localhost:5000"},
}
---

[TestParseContainerdConfig/malformed_endpoint - 1]
map[string][]string{
}
---

[TestParseContainerdConfig/registry_with_port_and_path - 1]
map[string][]string{
    "registry.example.com:5000": {"http://mirror.example.com:8080/v2"},
}
---

[TestExtractRegistriesFromKind/multiple_endpoints_uses_first - 1]
[]kindprovisioner.RegistryInfo{
    {Name:"kind-docker-io", Upstream:"https://registry-1.docker.io", Port:5000},
}
---

[TestExtractRegistriesFromKind/registry_with_special_characters - 1]
[]kindprovisioner.RegistryInfo{
    {Name:"kind-registry-example-com-5000-path", Upstream:"https://registry.example.com:5000/path", Port:5000},
}
---

[TestExtractRegistriesFromKind/single_registry - 1]
[]kindprovisioner.RegistryInfo{
    {Name:"kind-docker-io", Upstream:"https://registry-1.docker.io", Port:5000},
}
---

[TestExtractRegistriesFromKind/duplicate_registries_in_multiple_patches - 1]
[]kindprovisioner.RegistryInfo{
    {Name:"kind-docker-io", Upstream:"https://registry-1.docker.io", Port:5000},
}
---

[TestExtractRegistriesFromKind/no_containerd_patches - 1]
[]kindprovisioner.RegistryInfo(nil)
---

[TestExtractRegistriesFromKind/multiple_registries - 1]
[]kindprovisioner.RegistryInfo{
    {Name:"kind-docker-io", Upstream:"https://registry-1.docker.io", Port:5000},
    {Name:"kind-gcr-io", Upstream:"https://gcr.io", Port:5001},
}
---
